--- a/simple-example/src/main/resources/templates/index.html
+++ b/simple-example/src/main/resources/templates/index.html
@@ -14,10 +14,14 @@
 <label for="msg">新消息: </label><input id="msg" type="text"/>
 <button onclick="send()">发送消息</button>
 <hr/>
+<label for="sid">用户ID: </label><input id="sid" type="text"/>
+<button onclick="push()">服务器推送消息</button>
+<span>(上面的消息不用填)</span>
+<hr/>
 <div id="message"></div>
 </body>
 <script type="text/javascript">
-    //随机id
+    //随机id，为了省事，用户ID直接随机生成
     let id = ("000" + Math.floor(Math.random() * 10000)).slice(-4);
 
     //由相对地址转换为绝对地址
@@ -25,7 +29,7 @@
     addr.protocol = addr.protocol.replace("http", "ws");
     const url = addr.href;
 
-    //初始化
+    //初始化时直接打开连接
     $(function () {
         document.getElementById('welcome').innerHTML = "Welcome to anonymous chatting room!&nbsp;&nbsp;[" + id + "]" + '<br/>';
         openWebSocket();
@@ -79,7 +83,7 @@
     function closeWebSocket() {
         if (websocket != null) {
             websocket.close();
-            websocket = null;
+            websocket = null;//不清除会有问题
         }
     }
 
@@ -87,9 +91,23 @@
     function send() {
         if (websocket != null) {
             let message = document.getElementById('msg').value;
-            if (message) websocket.send(message);
-            document.getElementById('msg').value = "";
+            if (message) websocket.send(message);//其他已经在上面初始化过了
+            document.getElementById('msg').value = "";//清空input框
         }
+    }
+
+    //服务器主动推送，见SystemController
+    function push() {
+        let sid = document.getElementById('sid').value;
+        let url;
+        if (sid) {
+            url = "/push/" + sid;
+        } else {
+            url = "/push";
+        }
+        $.get(url, function (data) {
+            console.log(data);
+        }, "json");
     }
 
     //监听窗口关闭事件，当窗口关闭时，主动去关闭websocket连接，防止连接还没断开就关闭窗口，server端会抛异常。
