--- a/springboot-websocket-queue-security-example/src/main/resources/templates/login.html
+++ b/springboot-websocket-queue-security-example/src/main/resources/templates/login.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="form-group">
                     <label for="password">密 码：</label>
-                    <input type="password" class="form-control" placeholder="请输入密码" id="password" name="password">
+                    <input type="password" class="form-control" placeholder="请输入密码" id="password" name="password" value="123456">
                 </div>
                 <div class="checkbox" style="text-align:center;">
                     <input type="submit" value="登录" class="btn"/>
